[gd_scene load_steps=2 format=3 uid="uid://rjc47ep4il1w"]

[ext_resource type="Script" uid="uid://dq487ik8aj1ig" path="res://01/pong/scripts/hud.gd" id="1_e208y"]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e208y")

[node name="P1Score" type="Label" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 5.0
offset_right = 60.0
offset_bottom = 28.0

[node name="P2Score" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -60.0
offset_top = 5.0
offset_right = -20.0
offset_bottom = 28.0
grow_horizontal = 0
horizontal_alignment = 2

[node name="RallyScore" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 5.0
offset_right = 20.0
offset_bottom = 28.0
grow_horizontal = 2
horizontal_alignment = 1

[node name="StartLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -13.0
offset_right = 76.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
text = "Move P1 with W and S
Move P2 with Up and Down

Press space to start"
horizontal_alignment = 1

[node name="PauseLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -33.0
offset_right = 20.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 0.39215687)
text = "Press space to pause"
horizontal_alignment = 1

[node name="PausedLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -86.5
offset_top = -24.5
offset_right = 86.5
offset_bottom = 24.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
text = "Press space to resume

Press R to reset"
horizontal_alignment = 1
